--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.0",
+    "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "date-fns": "^2.30.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
