--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
+    "jotai": "^2.8.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
